@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.1 2018/03/23 16:43:28 minskim Exp $
+$NetBSD: distinfo,v 1.2 2019/07/31 19:25:41 brook Exp $
 
-SHA1 (R/forecast_8.2.tar.gz) = c84f996b42c316853e7c22cc035de597a31793f3
-RMD160 (R/forecast_8.2.tar.gz) = 343d4a1afbb22d5c49c4203be11afb7c7ad8e0cc
-SHA512 (R/forecast_8.2.tar.gz) = f4285cc01b499afd6e7b10e1124823ecf217ed017623ba7d2f274ee79083b491c62217c29263d06c2676b582ffb76cac43d64e201bebad4af94e34a905470742
-Size (R/forecast_8.2.tar.gz) = 784337 bytes
+SHA1 (R/forecast_8.7.tar.gz) = 1174b66990f89015f095d1c3f27da414757c54cc
+RMD160 (R/forecast_8.7.tar.gz) = 2bfe93af64689ed4820137b463edf46004199197
+SHA512 (R/forecast_8.7.tar.gz) = 096f813bc77c843c5cbeba9bfa36d6f91c6781ef7ec88acc5fc9f243cde4978083de0f6662e1458191709efa8b0f77798f36ea2deab5ccd18c47af0478861352
+Size (R/forecast_8.7.tar.gz) = 909190 bytes
